修改接口之后需要修改的页面，主页轮播图

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shangdong-project",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --port 8088 --hot --inline --color"
+    "start": "webpack-dev-server --port 8088 --hot --inline --color --progress"
   },
   "author": "renakan",
   "license": "ISC",
